# feature-course_5

./: README.md  pyproject.toml
src/: class_DBManager.py  database.ini  dbase_creating.py  hh_api.py  main.py
tests/: test_class_DBManager.py  test_dbase_creating.py  test_hh_api.py
